<resources>
    <string name="app_name">TheHotels</string>
    <string name="signin">Sign In</string>
    <string name="username">Username</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="judulDialog">Login Salah</string>
    <string name="pesanDialog">Username atau Password salah. Silahkan coba lagi!</string>
    <string name="cancel">Retry</string>
    <string name="cari">Pesan Hotel</string>
    <string name="list">Daftar Hotel</string>
    <string name="search">Search</string>
    <string name="in">Check-in Date</string>
    <string name="out">Check-out Date</string>
    <string name="spinner">Jumlah Kamar</string>
    <string-array name="labels_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="date_picker1">datePicker1</string>
    <string name="date_picker2">datePicker2</string>
    <string name="date_in">Check-in Date: </string>
    <string name="date_out">Check-out Date: </string>
    <string name="spinner_title">Jumlah Kamar: </string>
    <string name="nothing">Nothing Selected</string>
    <string name="tanggal_masuk">Tanggal Masuk</string>
    <string name="tanggal_keluar">Tanggal Keluar</string>
    <string name="arosa_hotel">Arosa Hotel</string>
    <string name="harga">Rp 300.000/kamar/malam</string>
    <string name="nama_hotel">Nama Hotel</string>
    <string name="judul_deskripsi">Deskripsi Hotel</string>
    <string name="deskripsi">Deskripsi Hotel..</string>
    <string name="judul_fasilitas">Fasilitas Kamar</string>
    <string name="fasilitas">Fasilitas Kamar..</string>
    <string name="hargaKamar">Harga Hotel: </string>
    <string name="img1">Image 1</string>
    <string name="deks">Silahka login untuk melanjutkan proses booking kamar</string>
    <string name="namaApp">TheHotel\'s</string>
</resources>