<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:layout_centerInParent="false"
android:layout_centerHorizontal="false"
android:layout_centerVertical="false"
android:gravity="center_horizontal"
android:orientation="vertical"
android:padding="20dp"
tools:context=".Search_activity">

    <TextView
        android:id="@+id/judul_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:fontFamily="sans-serif-condensed-medium"
        android:padding="@dimen/padding_normal"
        android:text="@string/cari"
        android:textColor="#29400b"
        android:textSize="34sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/check_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_normal"
            android:layout_marginTop="@dimen/padding_normal"
            android:layout_marginEnd="@dimen/padding_normal"
            android:layout_marginBottom="@dimen/padding_normal"
            android:onClick="dateCheckIn"
            android:text="@string/in" />

        <TextView
            android:id="@+id/tgl_masuk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_in"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/tanggal_masuk"
            android:textStyle="normal" />

        <Button
            android:id="@+id/check_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/check_in"
            android:layout_toEndOf="@id/check_in"
            android:onClick="dateCheckOut"
            android:text="@string/out" />

        <TextView
            android:id="@+id/tgl_keluar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/check_out"
            android:layout_marginStart="59dp"
            android:layout_marginLeft="59dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@id/tgl_masuk"
            android:layout_toRightOf="@id/tgl_masuk"
            android:text="@string/tanggal_keluar"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tgl_masuk"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/spinner"
            android:textColor="#000000"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tgl_keluar"
            android:layout_marginStart="37dp"
            android:layout_marginLeft="37dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@id/textView"
            android:layout_toRightOf="@id/textView"
            android:minHeight="48dp"
            tools:ignore="SpeakableTextPresentCheck" />

    </RelativeLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clickSearch"
        android:text="@string/cari" />

</LinearLayout>